2012-03-06  Aldy Hernandez  <aldyh@redhat.com>

	PR middle-end/52463
	* trans-mem.c (tm_region_init): Use last_basic_block.

2012-03-05  Richard Henderson  <rth@redhat.com>

	PR tree-opt/52242
	Revert: 2011-11-26  Richard Henderson  <rth@redhat.com>
	* omp-low.c (expand_omp_atomic): Assume anything aligned to
	BIGGEST_ALIGNMENT is aligned.

2012-03-05  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/sh.c (TARGET_ATOMIC_TEST_AND_SET_TRUEVAL): New hook.

2012-03-05  Richard Henderson  <rth@redhat.com>

	PR target/52481
	* config/m68k/sync.md (atomic_test_and_set): Use expand_simple_unop
	instead of calling negqi2 directly.

2012-03-05  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/mips/iris6.h [!USED_FOR_TARGET] (long_intmax): Declare.
	(INTMAX_TYPE): Use it.
	(UINTMAX_TYPE): Likewise.
	(SUBTARGET_OVERRIDE_OPTIONS): Define.
	(irix6_c_common_override_options): Declare.
	(C_COMMON_OVERRIDE_OPTIONS): Define.
	* config/mips/mips.c [TARGET_IRIX6] (long_intmax): Define.
	* config/mips/irix6-c.c: New file.
	* config/mips/t-irix6 (irix6-c.o): New target.
	* config.gcc (mips-sgi-irix6.5): Set c_target_objs,
	cxx_target_objs.

2012-03-02  Richard Henderson  <rth@redhat.com>

	* optabs.c (expand_atomic_test_and_set): Honor
	atomic_test_and_set_trueval even when atomic_test_and_set
	optab is not in use.

2012-03-02  Peter Bergner  <bergner@vnet.ibm.com>

	Backport from mainline
	2012-03-02  Peter Bergner  <bergner@vnet.ibm.com>

	* config/rs6000/vsx.md (vsx_set_<mode>): Reorder operands.

2012-03-02  Richard Guenther  <rguenther@suse.de>

	* DEV-PHASE: Set to prerelease.

2012-03-01  Richard Earnshaw  <rearnsha@arm.com>

	* config.gcc (obsolete): Add all ARM targets using the FPA.
	(with_fpu): Obsolete selection of the FPA or Maverick on ARM.
	* doc/install.texi: Avoid references to obsolete ARM ports.

2012-03-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	* config/epiphany/epiphany.md (movmisalign<mode>): New patterns.
