@@ -1,5 +1,12 @@
 2012-03-06  Aldy Hernandez  <aldyh@redhat.com>
 
+	* trans-mem.c: New typedef for tm_region_p.
+	Define vector types for tm_region_p.
+	(tm_region_init): Replace region_worklist to a vector called
+	bb_regions.
+
+2012-03-06  Aldy Hernandez  <aldyh@redhat.com>
+
 	PR middle-end/52463
 	* trans-mem.c (tm_region_init): Use last_basic_block.
 
